# crypto-trading-agent

./: .env  .gitignore  README.md  README_EN.md  analyze_market.py  crypto-workflow-diagram.mermaid  fix_metadata.sh  main.py  pyproject.toml  requirements.txt  usage.txt
configs/: my_config.json
logs/: logging-config.py
src/agents/: debate_room.py  execution.py  market_data.py  onchain_analysis.py  portfolio_manager.py  researcher_bear.py  researcher_bull.py  risk_manager.py  sentiment.py  technicals.py  valuation.py
src/backtest/: backtester.py  performance.py
src/backtest/strategies/: ema-cross.py  rsi_strategy.py
src/tests/: test_all_apis.py
src/tools/: crypto_api.py  notification.py  openrouter_config.py
workflow/: controller.py
